<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <ImageView
        android:layout_width="313dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/inacap" />

    <ImageView
        android:layout_width="286dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:src="@drawable/logo_app" />


    <TextView
        android:id="@+id/txv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:layout_gravity="center"
        />


    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_nombre" />


    <EditText
        android:id="@+id/edt_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_edad"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/edt_peso_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_peso_actual"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/idea_app_32x32"
        android:text="@string/btn_calcular" />
    <Button
        android:id="@+id/btn_instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/question_24x24"
        android:text="Ayuda" />



</LinearLayout>